# foundational-industry-energy-data

./: .buildinfo  .gitignore  6-digit_2022_Codes.xlsx  FIED_datafields.yml  FIED_sample_structure.json  Field.docx  INSTALL.md  README.md  README.rst  big_cap.csv  closer_look_ind_process.csv  compare_nonocs.csv  data_history.html  developtment.md  fied.analysis.html  fied.frs.html  fied.geocoder.html  fied.ghgrp.html  fied.html  fied.nei.html  fied.qpc.html  fied.scc.html  fied.tools.html  fied_compilation.py  fied_compilation_pseudocode.py  fied_environment.yml  final_data_summary_table.csv  final_data_summary_table.xlsx  food_fied_test.csv  formatted_ghgrp_unit_data.csv  frs_characterization_summary.csv  frs_mult.csv  genindex.html  ind_data.html  index.html  modules.html  nrel_data.html  null_unittypestd.csv  objects.inv  onsite_food.py  (+6 more)
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-enhancement.md
.github/workflows/: linter.yml
_autosummary/: fied.html
_modules/: index.html
_modules/fied/analysis/: analysis_figures.html  boiler_inventory_comparison.html
_modules/fied/frs/: frs_extraction.html
_modules/fied/geocoder/: geo_tools.html  geopandas_tools.html
_modules/fied/ghgrp/: calc_GHGRP_AA.html  get_GHGRP_data.html  ghgrp_fac_unit.html
_modules/fied/scc/: scc_unit_id.html
_modules/fied/tools/: misc_tools.html  naics_matcher.html
_sources/: fied.analysis.rst.txt  fied.geocoder.rst.txt  fied.nei.rst.txt  fied.tools.rst.txt
_sources/_autosummary/: fied.rst.txt
analysis/: Example_allocation.xlsx  FIED_prelim_analysis.pptx  analysis_figures.py  boiler_inventory_comparison.py  naics_analysis.py  nei_emissions_calc_methods.py  nei_ghgrp_comparison.pptm  nei_unit_analysis.py  nei_vs_ghgrp.xlsx  summary_figures.pptx  summary_table_nans.py  summary_unit_table.csv  ~$summary_figures.pptx
census/: census_qpc.py
data/: dir_structure.md
data/GHGRP/: ghgrp_energy_20230508-1606.parquet
docs/: Makefile
docs/diagram/: FIED_diagram.txt  README.md  run.sh
docs/source/: conf.py  fied.qpc.rst  fied.scc.rst  fied_changes.rst  ind_data.rst  index.rst  nrel_data.rst
energy/IEDB/: ag_electricity.py  ag_total.py  cons_toal.py  county_energy_nonmfg.py  mining.py  mining_total.py  run_mining.py
fied/: __init__.py  cli.py  datasets.py  fied_compilation.py
fied/analysis/: boiler_inventory_comparison.py  nei_industrial_sector.py
fied/data/GHGRP/: ghgrp_energy_20240110-1837.parquet
fied/datasets/: __init__.py  cbp.py  mod.py  naics.py
fied/energy/: energy_intensity.py
fied/energy/IEDB/: ag_total.py  cons.py  cons_toal.py  get_cbp.py  run_cons.py
fied/frs/: frs_extraction.py  naics_selection.py
fied/geocoder/: geo_tools.py  geopandas_tools.py
fied/ghgrp/: calc_GHGRP_AA.py  calc_GHGRP_energy.py  get_GHGRP_data.py  ghg_tiers.py  ghgrp_fac_unit.py  heat_rate_uncertainty.py  run_GHGRP.py
fied/nei/: nei_EF_calculations.py  nei_data_org.yml  unit_conversions.yml
fied/qpc/: census_qpc.py
fied/scc/: scc_describe.py  scc_unit_id.py
fied/tools/: CARB_2022_UnitandProcessLists.xlsx  all_fuels.csv  fuel_type_standardization.yaml  ghgrp_unit_types.yaml  naics_matcher.py  scc_unit_types.yaml  type_standardization.yml  unit_matcher.py
fied/utils/: __init__.py  mod.py
frs/: EPA_FRS_all_industry.py  EPA_FRS_combined_comparison.py  EPA_FRS_mfg.py  frs_extraction.py  frs_map.py  frs_query_api.py  frs_tools.py  registry_id_check.py  starting_facilities.py
geocoder/: Addresses.csv  geo_tools.py  geopandas_tools.py
ghgrp/: calc_GHGRP_AA.py  calc_GHGRP_energy.py  calculate_MfgEnergy.py  find_fips.py  get_GHGRP_data.py  ghg_tiers.py  ghgrp_fac_unit.py  ghgrp_unit_analysis.py  heat_rate_uncertainty.py  onsite_food.py  run_GHGRP.py
nei/: extracted_data_schema.json  iden_scc.csv  nei_EF_calculations.py  nei_analysis.py  nei_data_org.yml  nei_emissions_calc_methods.py  nei_industrial_sector.py  nei_unit_analysis.py  nei_unit_characterizationpy.py  unit_conversions.yml  webfire_comb_sox.csv
qpc/: census_qpc.py  food_qpc.py
scc/: detail_to_generic_mapping.xlsx  detail_to_generic_mapping.yml  iden_scc.csv  iden_scc_old.csv  scc.py  scc_describe.py  scc_service.py  scc_unit_id.py
tests/: calc_method_code_comparison.csv  missing_cap_test_data.csv  test_allocate_shared_ocs.py  test_find_missing_cap.py  test_ghgrp_unit_char.py  test_id_ghgrp_units.py  test_misc_tools.py  test_nei_calculations.py  test_separate_unit_data.py  test_unit_characterization.py  test_unit_type_selection.py
to_delete/: EPA_FRS_all_industry.py  EPA_FRS_combined_comparison.py  EPA_FRS_mfg.py  frs_map.py  nei_ef_id.py  scc_describe.py
tools/: CARB_2022_UnitandProcessLists.xlsx  energy_model_data.py  misc_tools.py  naics_matcher.py  type_standardization.yml  unit_mapping.xlsx  unit_type_codes.csv
