[project]
authors = [{name = "Gui Castelao", email = "guilherme@castelao.net"}]
dependencies = []
description = "Add a short description here"
name = "fied"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge", "anaconda", "main"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
fied = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
dask = ">=2023.2.0,<2024"
geopandas = "==0.12.1"
matplotlib = "==3.6.2"
numpy = "==1.23.4"
pandas = "==1.2.0"
plotly = "==5.11.0"
pyarrow = "==9.0.0"
pyyaml = "==6.0"
pyxlsb = "==1.0.10"
requests = "==2.28.1"
seaborn = "==0.12.1"
scikit-learn = "==1.1.3"

[tool.pixi.feature.dev.dependencies]
ipython = "*"
