[build-system]
requires = [
  "setuptools >= 61",
  "setuptools_scm[toml] >= 8",
]
build-backend = 'setuptools.build_meta'

[project]
name = "fied"
dynamic = ["version"]
description = "The Foundational Industry Energy Dataset (FIED) is a unit-level characterization of energy use in the U.S. industrial sector"
readme = "README.md"
authors = [
  {name = "Colin McMillan"},
  {name = "Gui Castelao", email = "gpimenta@nrel.gov"}
	]
maintainers = [
  {name = "Gui Castelao", email = "gpimenta@nrel.gov"}
	]
requires-python = ">= 3.9"
classifiers=[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "geopandas>=0.12.1",
  "matplotlib>=3.6.2",
  "numpy>=1.23.4",
  "openpyxl>=3.0.10",
  "pandas>=1.2.0",
  "plotly>=5.11.0",
  "pyarrow>=9.0.0",
  "pyyaml>=6.0",
  "pyxlsb>=1.0.10",
  "requests>=2.28.1",
  "seaborn>=0.12.1",
  "scikit-learn>=1.1.3",
  "pooch>=1.8.2,<2",
  "tqdm>=4.67.1,<5",
]

[project.urls]
homepage = "https://github.com/NREL/foundational-industry-energy-data"
documentation = "https://nrel.github.io/foundational-industry-energy-data/"
repository = "https://github.com/NREL/foundational-industry-energy-data"

[tool.pixi.project]
channels = ["conda-forge", "anaconda", "main"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
fied = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "~=3.9.0"
dask = ">=2023.2.0,<2024"
geopandas = "==0.12.1"
matplotlib = "==3.6.2"
numpy = "==1.23.4"
pandas = "==1.2.0"
plotly = "==5.11.0"
pyarrow = "==9.0.0"
pyyaml = "==6.0"
pyxlsb = "==1.0.10"
requests = "==2.28.1"
seaborn = "==0.12.1"
scikit-learn = "==1.1.3"
pooch = ">=1.8.2,<2"
tqdm = ">=4.67.1,<5"
cryptography = "==36.0.2"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev", "doc", "test"], solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.dev.dependencies]
ipython = "==8.15"
ruff = ">=0.9.6,<0.10"

[tool.pixi.feature.doc.dependencies]
sphinx = "==7.3.7"

[tool.pixi.feature.test.dependencies]
pytest = "~=7.4.0"

[tool.ruff]
line-length = 79
extend-exclude = [
  "fied/energy/IEDB/ag_total.py",
  "fied/energy/IEDB/county_energy_nonmfg.py",
  "fied/energy/IEDB/mining_total.py",
  ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
preview = true
select = [
  # "A", # flake8-builtins
  # "B", # flake8-bugbear
  "ARG", # flake8-unused-arguments
  "BLE", # flake8-blind-except
  # "C4", # flake8-comprehensions
  # "C90", # mccabe
  "COM", # flake8-commas
  # "D", # pydocstyle
  # "E", # pycodestyle
  # "EM", # flake8-errmsg
  # "F", # Pyflakes
  # "FURB", # refurb
  "FLY", #  flynt
  # "G", # flake8-logging-format
  "I", # isort
  # "INP", # flake8-no-pep420
  # "ISC", # flake8-implicit-str-concat
  # "LOG", # flake8-logging
  "N", # pep8-naming
  "NPY", # numpy-specific
  # "PD", # pandas-vet
  # "PERF", # Perflint
  # "PIE", # flake8-pie
  # "PL", # Pylint
  # "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  # "Q", # flake8-quotes
  # "RET", # flake8-return
  "RSE", # flake8-raise
  # "RUF", # Ruff-specific rules
  # "S", # flake8-bandit
  "SLF", # flake8-self
  # "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports (absolute imports)
  # "TRY", # tryceratops
  # "UP", # pyupgrade
  # "W", # Warning
]
ignore = [
  "ARG001", # unused function argument
  "ARG002", # unused method argument
  "COM812", # missing-trailing-comma (incompatible with formatter)
  "I001", # isort: imports are incorrectly sorted
  "N801", # class name should use CapWords convention
  "N802", # function name should be lowercase
  "N803", # argument name should be lowercase
  "N806", # variable in function should be lowercase
  "N815", # mixedCase variable in class scope
  "N816", # mixedCase variable in global scope
  "N999", # invalid module name
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]

[tool.setuptools]
packages = ["fied"]

[tool.setuptools_scm]
version_file = "fied/_version.py"
